# binson-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: error.rs  lib.rs  ser.rs
