[package]
name = "binson"
description = "Implements the binson binary serialization format. See binson.org for details."
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["binson", "serialization"]
categories = ["encoding"]
authors = ["David Palm <dvdplm@gmail.com>"]
repository = "https://github.com/dvdplm/binson-rust"

[dependencies]
serde = "1.0.23"
serde_derive = "1.0.23"
byteorder = "1.2.1"